<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/appTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp" >

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                tools:ignore="UselessParent" >

                <TextView
                    android:id="@+id/coffeeNameTextView"
                    android:text="The Title"
                    tools:ignore="HardcodedText"
                    android:layout_width="320dp"
                    android:textSize="24dp"
                    android:textColor="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/favouriteImageView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_favourite_off"
                    tools:ignore="ContentDescription"
                    android:layout_column="64"
                    android:onClick="toggle"
                    android:layout_gravity="right|left" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/coffeeShopTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The Description..."
            android:textColor="@color/bannerBGColor"
            tools:ignore="HardcodedText"
            android:textSize="18dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/barTextView"
        style="@style/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coffeeDetailsLbl" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/footerLinearLayout"
            style="@style/footer"
            android:layout_alignParentBottom="true"
            android:background="@color/bannerBGColor" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/appWebsite"
                android:textColor="@color/bgColor" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/LinearLayout01"
                style="@style/footer"
                android:layout_alignParentBottom="true"
                android:background="@color/bannerBGColor" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:text="@string/appWebsite"
                    android:textColor="@color/bgColor" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/coffeeRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:numStars="5"
                android:rating="2.5"
                android:stepSize="0.5" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignRight="@+id/coffeeRatingBar"
                android:ems="10"
                android:inputType="textShortMessage" />

            <EditText
                android:id="@+id/shopEditText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/nameEditText"
                android:layout_below="@+id/nameEditText"
                android:ems="10"
                android:inputType="textShortMessage" />

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_above="@+id/coffeeRatingBar"
                android:layout_marginLeft="20dp"
                android:text="@string/coffeeRatingLbl"
                android:textColor="@color/appFontColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/shopEditText"
                android:gravity="top"
                android:text="@string/coffeeNameLbl"
                android:textColor="@color/appFontColor"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/priceEditText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/shopEditText"
                android:layout_below="@+id/shopEditText"
                android:ems="10"
                android:inputType="textShortMessage|numberDecimal" />

            <TextView
                android:id="@+id/shopTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/TextView01"
                android:layout_alignTop="@+id/shopEditText"
                android:text="@string/coffeeShopLbl"
                android:textColor="@color/appFontColor"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/shopTextView"
                android:layout_alignTop="@+id/priceEditText"
                android:text="@string/coffeePriceLbl"
                android:textColor="@color/appFontColor"
                android:textSize="18sp" />

            <Button
                android:id="@+id/updateCoffeeBtn"
                style="@style/homeScreenButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/LinearLayout01"
                android:layout_centerHorizontal="true"
                android:drawableTop="@drawable/ic_save_todo"
                android:text="@string/updateCoffeeBtnLbl"
                android:onClick="update"/>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>